# ratsim_experiments

./: .gitignore  CLAUDE.md  analyze_experiment.py  analyze_run_data.py  eval_one_run.py  eval_one_run_dreamer.py  experiment_defs.py  feature_extractors.py  human_control_test_adaptive.py  kill_all_unity.sh  lstm_fastpath.py  overnight_batch.sh  paramtest.sh  pyproject.toml  scheduler_run.py  scheduler_status.py  tensorboard.sh  test.py  test_dreamerv3.py  train.py  train_dreamerv3.py
defs/: bptt_length.yaml  compare_5houses.yaml  compare_fullsar.yaml  compare_loopymaze.yaml  dreamers_maze_smoke.yaml  gps_ablation.yaml  gps_ablation_5house.yaml  gps_ablation_5house_ppo.yaml  gps_ablation_maze_default.yaml  memory_3malls.yaml  memory_5houses.yaml  memory_houses_paperhparams.yaml  memory_orthomaze.yaml  method_compare.yaml  openfield_to_houses_curriculum.yaml  ortho_wells_adaptive.yaml  ortho_wells_adaptive_no_explore_reward.yaml  ortho_wells_adaptive_nohomeprime.yaml  ortho_wells_adaptive_nohomeprime_bl128.yaml  ortho_wells_adaptive_nohomeprime_bl256.yaml  ortho_wells_adaptive_nohomeprime_bl256_c2.yaml  ortho_wells_adaptive_nohomeprime_consec4.yaml  ortho_wells_adaptive_nohomeprime_dreamer_ladder.yaml  ortho_wells_adaptive_nohomeprime_no_explore_reward.yaml  smoke_test.yaml  volex_reward_sweep.yaml  wellmaze_cue_5x5.yaml  wellmaze_cue_test.yaml  wellmaze_cue_test_smol_model.yaml  wellmaze_test.yaml
rundefs/: big_static_forest_foraging_scalability_test.yaml  big_static_rockmaze_foraging_scalability.yaml  big_static_rockmaze_foraging_scalability_smoke.yaml  (+21 more)
(+10 files in other folders)
